--- a/src/config/config.env
+++ b/src/config/config.env
@@ -5,7 +5,7 @@
 PORT=4000
 
 # MongoDB connection string
-MONGO_URI=mongodb+srv://user:Stronghold!1@cluster0.ixk3oxm.mongodb.net
+MONGO_URI=""
 
 # JWT secret and expiry
 JWT_SECRET=WFFWf15115U842UGUBWF81EE858UYBY51BGBJ5E51Q
